<resources>
    <string name="app_name">StructureStudioReservationApp</string>
    <string name="log_in">Log in</string>
    <string name="if_you_don_t_have_account">If you don\'t have account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="if_you_have_account">If you have account!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password\n</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="back_button">Back button</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="more">More</string>
    <string name="make_an_reservation">Make an reservation</string>
    <string name="all_maded_reservations">All maded reservations</string>
    <string name="history">All reservations</string>
    <string name="profile">Profile</string>
    <string name="log_out">Sign out</string>
    <string name="logo">Logo</string>
    <string name="open_navigation_view">Open navigation view</string>
    <string name="close_navigation_view">Close navigation view</string>
    <string name="save_my_login_info">Save my login info</string>
    <string name="home_page">Home</string>
    <string name="settings">Settings</string>
    <string name="appinfo">AppInfo</string>
    <string name="music">Music</string>
    <string name="delete_account">Delete account</string>
    <string name="music_off">Music off</string>
    <string name="music_on_off">Music turn on/off</string>
    <string name="about_us">About us</string>
    <string name="about_us_text_1">We at Structura Studio believe in the power of a personalized approach. </string>
    <string name="about_us_text_2">By combining the specific requirements of each client with our expert advice, we ensure that every project receives a unique and tailored solution.</string>
    <string name="about_us_text_3">Our team is dedicated to understanding your needs and providing the highest quality service, resulting in outcomes that are both innovative and effective.</string>
    <string name="about_us_text_4">Trust us to transform your vision into reality with a commitment to excellence and attention to detail.</string>
    <string name="profile_settings">Profile settings</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="for_updating_some_of_your_data_you_just_need_to_type_the_new_data_in_the_following_field">For updating some of your data you just need to type the new data in the following field.</string>
    <string name="update_data">Update data</string>
    <string name="name">Name</string>
    <string name="separator">:</string>
    <string name="barber">Barber name</string>
    <string name="position_barber">Position barber</string>
    <string name="position">position</string>
    <string name="hours">Hours</string>
    <string name="please_select_hour">Please select hour!</string>
    <string name="you_have_successfully_made_an_reservation">You have successfully made an reservation!</string>
    <string name="barber_name">Barber name</string>
    <string name="barber_barber">Barber</string>
    <string name="Date">Date</string>
    <string name="date_d">2000-5-14</string>
    <string name="Time">Time</string>
    <string name="time_t">10:00:00</string>
    <string name="service">Service</string>
    <string name="service_s">Haircut</string>
    <string name="price">Price</string>
    <string name="price_p">100BGN</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="future_appointment">Future appointment</string>
    <string name="older_appointments">Older appointments</string>
</resources>