<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/bottom_nav_menu"
        android:layout_gravity="start"
        />

    <LinearLayout
        android:id="@+id/updateFields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_updating_some_of_your_data_you_just_need_to_type_the_new_data_in_the_following_field"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp" />
        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_data"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/montserrat"
            />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>