<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:background="@null"
        android:layout_gravity="start"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_foreground"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/signinEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signinPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:layout_marginBottom="32dp"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_my_login_info"
        android:textColor="@color/white"
        />

    <ImageButton
        android:id="@+id/signButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_signin"
        android:layout_gravity="center"
        android:background="@null"
        android:layout_margin="15dp"
        tools:ignore="ContentDescription"
        android:contentDescription="@string/log_in" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:text="@string/if_you_don_t_have_account"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        tools:ignore="ContentDescription"
        />

    <ImageButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_signup"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        tools:ignore="ContentDescription"
        android:contentDescription="@string/log_in"/>


</LinearLayout>
