<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llMain"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <!--LinearLayout orientation horizontal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/BarberName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="@string/fname" />

            <!--TextView for displaying ":" -->
            <TextView
                android:id="@+id/date_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#454545"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"
                tools:text="@string/date_d" />

            <!--TextView for displaying Email -->
            <TextView
                android:id="@+id/time_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#454545"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                tools:text="@string/time_t" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>